# Animal

./: Animals.pptx  Animals.qrc  Bground.qml  CMakeLists.txt  Chessboard.qml  Images.qrc  Main.qml  README.md  Result.qml  StartGame.qml  main.cpp  待解决的一些问题.txt  斗兽棋.txt  斗兽棋开发说明文档.docx  斗兽棋用户使用文档.docx
actions/: Action.qml  Chessmove.qml
entitys/: Animals.qml
